--- a/RidingCompanion/app/src/main/res/layout/fragment_info.xml
+++ b/RidingCompanion/app/src/main/res/layout/fragment_info.xml
@@ -6,58 +6,59 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".InfoFragment">
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/dob_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Date of Birth: "
-            app:layout_constraintEnd_toEndOf="@+id/textView13"
-            app:layout_constraintTop_toBottomOf="@+id/textView13" />
+            app:layout_constraintEnd_toEndOf="@+id/gender_label"
+            app:layout_constraintTop_toBottomOf="@+id/gender_label" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/phone_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Phone #: "
-            app:layout_constraintEnd_toEndOf="@+id/textView9"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintEnd_toEndOf="@+id/email_label"
+            app:layout_constraintTop_toBottomOf="@+id/email_label" />
 
         <EditText
             android:id="@+id/editTextPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="-5dp"
             android:ems="10"
             android:inputType="phone"
             android:textSize="12sp"
-            android:layout_marginBottom="-5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView13"
+            app:layout_constraintBottom_toBottomOf="@+id/phone_label"
             app:layout_constraintStart_toStartOf="@+id/username_show" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/confirm_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Confirm: "
-            app:layout_constraintEnd_toEndOf="@+id/textView10"
-            app:layout_constraintTop_toBottomOf="@+id/textView10" />
+            app:layout_constraintEnd_toEndOf="@+id/password_label"
+            app:layout_constraintTop_toBottomOf="@+id/password_label" />
 
         <EditText
             android:id="@+id/editTextConfirmPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_marginBottom="-5dp"
+            android:ems="10"
             android:inputType="textPassword"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView12"
+            app:layout_constraintBottom_toBottomOf="@+id/confirm_label"
             app:layout_constraintStart_toStartOf="@+id/username_show" />
 
         <TextView
@@ -75,18 +76,19 @@
             android:id="@+id/logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="110dp"
             android:layout_marginBottom="100dp"
             android:onClick="logout"
             android:text="Log out"
-            android:layout_marginTop="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView14" />
+            app:layout_constraintTop_toBottomOf="@+id/height_label"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/username_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -98,41 +100,41 @@
             android:id="@+id/editTextEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="-5dp"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:layout_marginBottom="-5dp"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView9"
+            app:layout_constraintBottom_toBottomOf="@+id/email_label"
             app:layout_constraintStart_toStartOf="@+id/username_show" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/email_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Email: "
-            app:layout_constraintEnd_toEndOf="@+id/textView12"
-            app:layout_constraintTop_toBottomOf="@+id/textView12" />
+            app:layout_constraintEnd_toEndOf="@+id/dob_label"
+            app:layout_constraintTop_toBottomOf="@+id/dob_label" />
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_marginBottom="-5dp"
+            android:ems="10"
             android:inputType="textPassword"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView10"
+            app:layout_constraintBottom_toBottomOf="@+id/password_label"
             app:layout_constraintStart_toStartOf="@+id/username_show" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/password_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Password: "
-            app:layout_constraintEnd_toEndOf="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintEnd_toEndOf="@+id/username_label"
+            app:layout_constraintTop_toBottomOf="@+id/username_label" />
 
         <Button
             android:id="@+id/save"
@@ -149,15 +151,105 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView6"
-            app:layout_constraintStart_toEndOf="@+id/textView6" />
+            app:layout_constraintBottom_toBottomOf="@+id/username_label"
+            app:layout_constraintStart_toEndOf="@+id/username_label" />
 
         <TextView
             android:id="@+id/birthday_show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/textView14"
+            app:layout_constraintBottom_toBottomOf="@+id/dob_label"
             app:layout_constraintStart_toStartOf="@+id/editTextPhone" />
+
+        <TextView
+            android:id="@+id/weight_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Weight: "
+            app:layout_constraintEnd_toEndOf="@+id/phone_label"
+            app:layout_constraintTop_toBottomOf="@+id/phone_label" />
+
+        <TextView
+            android:id="@+id/height_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Height:"
+            app:layout_constraintEnd_toEndOf="@+id/weight_label"
+            app:layout_constraintTop_toBottomOf="@+id/weight_label" />
+
+        <EditText
+            android:id="@+id/editWeight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="number"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/weight_label"
+            app:layout_constraintStart_toStartOf="@+id/username_show" />
+
+        <EditText
+            android:id="@+id/editHeight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="number"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/height_label"
+            app:layout_constraintStart_toStartOf="@+id/username_show" />
+
+        <TextView
+            android:id="@+id/gender_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Gender:"
+            app:layout_constraintEnd_toEndOf="@+id/confirm_label"
+            app:layout_constraintTop_toBottomOf="@+id/confirm_label" />
+
+        <RadioButton
+            android:id="@+id/radioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="-15dp"
+            android:text="Male"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/gender_label"
+            app:layout_constraintStart_toStartOf="@+id/username_show" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:text="Female"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/radioButton"
+            app:layout_constraintStart_toEndOf="@+id/radioButton" />
+
+        <Switch
+            android:id="@+id/auto_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:checked="true"
+            android:text="Auto Login"
+            app:layout_constraintBottom_toTopOf="@+id/logout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/error_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/auto_login"
+            android:textColor="@color/design_default_color_error"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
