--- a/RidingCompanion/app/src/main/res/layout/activity_registration.xml
+++ b/RidingCompanion/app/src/main/res/layout/activity_registration.xml
@@ -18,6 +18,7 @@
             android:ems="10"
             android:hint="username"
             android:inputType="textPersonName"
+            android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,49 +32,36 @@
             android:ems="10"
             android:hint="phone number"
             android:inputType="phone"
+            android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/reg_password" />
+            app:layout_constraintTop_toBottomOf="@+id/reg_confirm" />
 
         <EditText
             android:id="@+id/reg_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:ems="10"
             android:hint="email address"
             android:inputType="textEmailAddress"
+            android:textSize="12dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/reg_phone" />
+            app:layout_constraintTop_toBottomOf="@+id/radioButton3" />
 
         <TextView
             android:id="@+id/reg_birthday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:ems="10"
+            android:layout_marginTop="30dp"
             android:hint="birthday"
             android:inputType="date"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.408"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/reg_email"
             app:layout_constraintTop_toBottomOf="@+id/reg_email" />
-
-        <EditText
-            android:id="@+id/reg_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:ems="10"
-            android:hint="confirm password"
-            android:inputType="textPassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/reg_confirm" />
 
         <EditText
             android:id="@+id/reg_confirm"
@@ -81,8 +69,23 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:ems="10"
+            android:hint="confirm password"
+            android:inputType="textPassword"
+            android:textSize="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reg_password" />
+
+        <EditText
+            android:id="@+id/reg_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:ems="10"
             android:hint="password"
             android:inputType="textPassword"
+            android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,15 +95,13 @@
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="60dp"
+            android:layout_marginTop="50dp"
             android:onClick="register"
             android:text="Register"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/reg_birthday" />
+            app:layout_constraintTop_toBottomOf="@+id/reg_height" />
 
         <TextView
             android:id="@+id/textView2"
@@ -118,9 +119,9 @@
             android:id="@+id/error_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text=""
             android:textColor="@color/design_default_color_error"
-            android:layout_marginBottom ="10dp"
             app:layout_constraintBottom_toTopOf="@+id/button3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -130,13 +131,53 @@
             android:id="@+id/button"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="36dp"
             android:layout_marginBottom="-5dp"
             android:text="Button"
             app:layout_constraintBottom_toBottomOf="@+id/reg_birthday"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
-            app:layout_constraintStart_toEndOf="@+id/reg_birthday" />
+            app:layout_constraintEnd_toEndOf="@+id/reg_email" />
+
+        <EditText
+            android:id="@+id/reg_weight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:ems="10"
+            android:hint="Weight"
+            android:inputType="number"
+            android:textSize="12dp"
+            app:layout_constraintStart_toStartOf="@+id/reg_birthday"
+            app:layout_constraintTop_toBottomOf="@+id/reg_birthday" />
+
+        <EditText
+            android:id="@+id/reg_height"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:ems="10"
+            android:hint="Height"
+            android:inputType="number"
+            android:textSize="12dp"
+            app:layout_constraintStart_toStartOf="@+id/reg_weight"
+            app:layout_constraintTop_toBottomOf="@+id/reg_weight" />
+
+        <RadioButton
+            android:id="@+id/radioButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Male"
+            android:checked="true"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="@+id/reg_phone"
+            app:layout_constraintTop_toBottomOf="@+id/reg_phone" />
+
+        <RadioButton
+            android:id="@+id/radioButton4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Female"
+            android:checked="false"
+            app:layout_constraintBottom_toBottomOf="@+id/radioButton3"
+            app:layout_constraintEnd_toEndOf="@+id/reg_phone" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
