--- a/RidingCompanion/app/src/main/res/layout/activity_riding.xml
+++ b/RidingCompanion/app/src/main/res/layout/activity_riding.xml
@@ -101,7 +101,7 @@
         app:layout_constraintTop_toBottomOf="@+id/calories_title" />
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/timeShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
