--- a/RidingCompanion/app/src/main/res/layout/fragment_rank.xml
+++ b/RidingCompanion/app/src/main/res/layout/fragment_rank.xml
@@ -20,11 +20,11 @@
 
     <Button
         android:id="@+id/refresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="-10dp"
+        android:layout_width="72dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="40dp"
         android:text="Refresh"
+        android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4" />
 
