--- a/RidingCompanion/app/src/main/res/layout/activity_riding.xml
+++ b/RidingCompanion/app/src/main/res/layout/activity_riding.xml
@@ -86,7 +86,6 @@
         android:id="@+id/speed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="17dp"
         app:layout_constraintStart_toStartOf="@+id/speed_title"
         app:layout_constraintTop_toBottomOf="@+id/speed_title" />
@@ -96,26 +95,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
-        android:layout_marginEnd="25dp"
-        app:layout_constraintEnd_toEndOf="@+id/calories_title"
+        app:layout_constraintStart_toStartOf="@+id/calories_title"
         app:layout_constraintTop_toBottomOf="@+id/calories_title" />
 
     <TextView
         android:id="@+id/timeShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
         android:layout_marginTop="17dp"
         app:layout_constraintStart_toStartOf="@+id/time_title"
         app:layout_constraintTop_toBottomOf="@+id/time_title" />
 
     <TextView
-        android:id="@+id/distance"
+        android:id="@+id/total_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
-        android:layout_marginEnd="26dp"
-        app:layout_constraintEnd_toEndOf="@+id/distance_title"
+        app:layout_constraintStart_toStartOf="@+id/distance_title"
         app:layout_constraintTop_toBottomOf="@+id/distance_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
