--- a/RidingCompanion/app/src/main/res/layout/activity_riding.xml
+++ b/RidingCompanion/app/src/main/res/layout/activity_riding.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Riding">
 
-
-    <!--    <Button-->
-    <!--        android:id="@+id/moreinfo"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginEnd="42dp"-->
-    <!--        android:layout_marginBottom="118dp"-->
-    <!--        android:text="More Info"-->
-    <!--        android:onClick="moreInfo"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toStartOf="@+id/stop" />-->
-
     <TextView
         android:id="@+id/time_title"
         android:layout_width="wrap_content"
@@ -113,5 +101,16 @@
         android:layout_marginTop="17dp"
         app:layout_constraintStart_toStartOf="@+id/distance_title"
         app:layout_constraintTop_toBottomOf="@+id/distance_title" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="98dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:text="Music Off"
+        android:textSize="10sp"
+        app:layout_constraintStart_toEndOf="@+id/stop"
+        app:layout_constraintTop_toTopOf="@+id/stop" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
