--- a/RidingCompanion/app/src/main/res/layout/activity_registration.xml
+++ b/RidingCompanion/app/src/main/res/layout/activity_registration.xml
@@ -54,12 +54,13 @@
 
         <TextView
             android:id="@+id/reg_birthday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="82dp"
+            android:layout_height="22dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="30dp"
             android:hint="birthday"
             android:inputType="date"
-            android:textSize="16sp"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@+id/reg_email"
             app:layout_constraintTop_toBottomOf="@+id/reg_email" />
 
@@ -129,10 +130,11 @@
 
         <Button
             android:id="@+id/button"
-            android:layout_width="30dp"
+            android:layout_width="55dp"
             android:layout_height="30dp"
             android:layout_marginBottom="-5dp"
-            android:text="Button"
+            android:text="Date"
+            android:textSize="7sp"
             app:layout_constraintBottom_toBottomOf="@+id/reg_birthday"
             app:layout_constraintEnd_toEndOf="@+id/reg_email" />
 
@@ -140,6 +142,7 @@
             android:id="@+id/reg_weight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="-5dp"
             android:layout_marginTop="30dp"
             android:ems="10"
             android:hint="Weight"
