--- a/RidingCompanion/app/src/main/res/layout/fragment_checkin.xml
+++ b/RidingCompanion/app/src/main/res/layout/fragment_checkin.xml
@@ -24,6 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="330dp"
         android:layout_marginTop="40dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
