--- a/RidingCompanion/app/src/main/res/layout/activity_registration.xml
+++ b/RidingCompanion/app/src/main/res/layout/activity_registration.xml
@@ -145,7 +145,7 @@
             android:layout_marginStart="-5dp"
             android:layout_marginTop="30dp"
             android:ems="10"
-            android:hint="Weight"
+            android:hint="Weight in lbs"
             android:inputType="number"
             android:textSize="12dp"
             app:layout_constraintStart_toStartOf="@+id/reg_birthday"
@@ -157,8 +157,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:ems="10"
-            android:hint="Height"
-            android:inputType="number"
+            android:hint="Height in ft"
+            android:inputType="numberDecimal"
             android:textSize="12dp"
             app:layout_constraintStart_toStartOf="@+id/reg_weight"
             app:layout_constraintTop_toBottomOf="@+id/reg_weight" />
