--- a/RidingCompanion/app/src/main/res/layout/fragment_checkin.xml
+++ b/RidingCompanion/app/src/main/res/layout/fragment_checkin.xml
@@ -22,13 +22,24 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
-        android:layout_height="330dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="310dp"
+        android:layout_marginTop="60dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/dateSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginBottom="10dp"
+        android:text="Click here to select Date"
+        android:textColor="#3EB7ED"
+        app:layout_constraintBottom_toTopOf="@+id/listView"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
