--- a/RidingCompanion/app/src/main/res/layout/fragment_info.xml
+++ b/RidingCompanion/app/src/main/res/layout/fragment_info.xml
@@ -166,7 +166,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="Weight: "
+            android:text="Weight (lbs): "
             app:layout_constraintEnd_toEndOf="@+id/phone_label"
             app:layout_constraintTop_toBottomOf="@+id/phone_label" />
 
@@ -175,7 +175,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="Height:"
+            android:text="Height (ft):"
             app:layout_constraintEnd_toEndOf="@+id/weight_label"
             app:layout_constraintTop_toBottomOf="@+id/weight_label" />
 
@@ -183,6 +183,7 @@
             android:id="@+id/editWeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="-5dp"
             android:ems="10"
             android:inputType="number"
             android:textSize="12sp"
@@ -193,8 +194,9 @@
             android:id="@+id/editHeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="-5dp"
             android:ems="10"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/height_label"
             app:layout_constraintStart_toStartOf="@+id/username_show" />
